--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,11 +2,11 @@
 <html lang="">
   <head>
     <meta charset="utf-8">
+    <link rel="icon" type="image/png" href="logo-black.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" rel="stylesheet" />
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Groupomania - Réseau social d'entreprise</title>
   </head>
   <body>
     <noscript>
